--- a/static_files/css/main.css
+++ b/static_files/css/main.css
@@ -1,295 +1,301 @@
 .contain {
-    display: flex;
-    flex-direction: row;
-  }
+  display: flex;
+  flex-direction: row;
+}
 
+
+.sidemenu {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  border-right: 1px solid #bdbdbd;
+  width: 350px;
+  padding: 36px;
+  background-color: white;
+}
+
+img {
+  pointer-events: none;
+}
+
+.title {
+  margin-bottom: 20px;
+}
+
+.title>img {
+  /* border: 1px solid red; */
+  width: 100%;
+}
+
+.menu-item {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 8px;
+}
+
+.menu-item:hover {
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+.menu-item>a {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: black;
+}
+
+.menu-item>a>p {
+  margin-left: 20px;
+}
+
+.profile-image {
+  display: flex;
+  align-items: center;
+}
+
+.profile-image img {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+}
+
+.profile-image>p {
+  margin-left: 12px;
+}
+
+.menu-item-bottom {
+  margin-top: auto;
+
+  /* border: 1px solid red; */
+}
+
+.menu-item-bottom>a:hover {
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+.menu-item-bottom>a {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin-top: 15px;
+  padding: 8px;
+  color: black;
+}
+
+.menu-item-bottom>a>p {
+  margin-left: 20px;
+}
+
+
+@media only screen and (max-width: 900px) {
   .sidemenu {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    border-right: 1px solid #bdbdbd;
-    width: 350px;
-    padding: 36px;
-    background-color: white;
+    width: 80px;
+    padding: 20px;
   }
 
-  .title {
-    margin-bottom: 20px;
-  }
-  .title >img{
-    /* border: 1px solid red; */
-    width: 100%;
+  .title h1 {
+    display: none;
   }
 
-  .menu-item {
-    margin-top: 8px;
-    margin-bottom: 8px;
-    padding: 8px;
+  .item-text {
+    display: none;
   }
+}
 
-  .menu-item:hover {
-    background-color: #f5f5f5;
-    border-radius: 10px;
-  }
+.middle {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-left: 350px;
+  width: 100vw;
+  height: fit-content;
+  background-color: #eeeeee;
+  /* border: 1px solid red; */
+}
 
-  .menu-item > a {
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    color: black;
-  }
+.box {
+  width: fit-content;
+  columns: 3;
+  column-gap: 20px;
+}
 
-  .menu-item > a > p {
-    margin-left: 20px;
-  }
+.img-card {
+  display: block;
+  position: relative;
+  width: 400px;
+  cursor: pointer;
+  /* margin-top: 20px; */
+  /* border: 1px solid green; */
+}
 
-  .profile-image {
-    display: flex;
-    align-items: center;
-  }
+.img-card>a>img {
+  break-inside: avoid;
+  margin-top: 20px;
+  width: 100%;
+  object-fit: contain;
+}
 
-  .profile-image img {
-    height: 25px;
-    width: 25px;
-    border-radius: 50%;
-  }
+.img-card>.overlay {
+  /* border: 1px solid red; */
+  position: absolute;
+  top: 0;
+  height: 97%;
+  width: 100%;
+  margin-top: 20px;
+  background: rgb(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: opacity 0.25s;
+  pointer-events: none;
+}
 
-  .profile-image > p {
-    margin-left: 12px;
-  }
+.hover-img>img {
+  break-inside: avoid;
+  margin-top: 20px;
+  width: 100%;
+  object-fit: contain;
+}
 
-  .menu-item-bottom {
-    margin-top: auto;
+.content {
+  pointer-events: all;
+  /* border: 1px solid red; */
+  padding-left: 20px;
 
-    /* border: 1px solid red; */
-  }
+  justify-content: center;
+  position: absolute;
+  bottom: 25px;
+}
 
-  .menu-item-bottom > a:hover {
-    background-color: #f5f5f5;
-    border-radius: 10px;
-  }
+.post-profile-div>a {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
-  .menu-item-bottom > a {
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    margin-top: 15px;
-    padding: 8px;
-    color: black;
-  }
+.post-profile-div>a>p {
+  color: white;
+  font-weight: bold;
+  font-size: 22px;
+  margin-left: 15px;
+}
 
-  .menu-item-bottom > a > p {
-    margin-left: 20px;
-  }
+.post-profile-div {
+  border-radius: 100%;
+}
+
+.post-profile {
+  height: 45px;
+  width: 45px;
+  /* object-fit: contain; */
+  border: 3px snow white;
+  border-radius: 50%;
+
+}
 
 
-  @media only screen and (max-width: 900px) {
-    .sidemenu {
-      width: 80px;
-      padding: 20px;
-    }
 
-    .title h1 {
-      display: none;
-    }
 
-    .item-text {
-      display: none;
-    }
-  }
 
+.img-card:hover .overlay {
+  opacity: 1;
+}
+
+
+
+@media only screen and (max-width: 1600px) {
   .middle {
-    position: relative;
-    display: flex;
-    justify-content: center;
     margin-left: 350px;
-    width: 100vw;
-    height: fit-content;
-    background-color: #eeeeee;
-    /* border: 1px solid red; */
   }
 
   .box {
-    width: fit-content;
     columns: 3;
-    column-gap: 20px;
+    column-gap: 10px;
   }
 
   .img-card {
-    display: block;
-    position: relative;
-    width: 400px;
-    cursor: pointer;
-    /* margin-top: 20px; */
-    /* border: 1px solid green; */
-  }
-
-  .img-card > a > img {
+    width: 380px;
     break-inside: avoid;
-    margin-top: 20px;
-    width: 100%;
-    object-fit: contain;
+  }
+}
+
+@media only screen and (max-width: 1530px) {
+  .middle {
+    margin-left: 350px;
   }
 
-  .img-card > .overlay{
-    /* border: 1px solid red; */
-    position: absolute;
-    top: 0;
-    height: 97%;
-    width: 100%;
-    margin-top: 20px;
-    background: rgb(0, 0, 0,0.2);
-    opacity: 0;
-    transition: opacity 0.25s;
-    pointer-events: none;
+  .box {
+    columns: 3;
+    column-gap: 10px;
   }
 
-  .hover-img > img{
+  .img-card {
+    width: 350px;
     break-inside: avoid;
-    margin-top: 20px;
-    width: 100%;
-    object-fit: contain;
+  }
+}
+
+@media only screen and (max-width: 1445px) {
+  .middle {
+    margin-left: 350px;
   }
 
-  .content{
-    pointer-events: all;
-    /* border: 1px solid red; */
-    padding-left: 20px;
-    
-    justify-content: center;
-    position: absolute;
-    bottom: 25px;
+  .box {
+    columns: 3;
+    column-gap: 10px;
   }
 
-  .post-profile-div > a{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  .img-card {
+    width: 280px;
+    break-inside: avoid;
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  .middle {
+    margin-left: 350px;
   }
 
-  .post-profile-div > a >p{
-    color: white;
-    font-weight: bold;
-    font-size: 22px;
-    margin-left: 15px;
+  .box {
+    columns: 2;
+    column-gap: 10px;
   }
 
-  .post-profile-div{
-    border-radius: 100%;
+  .img-card {
+    width: 350px;
+    break-inside: avoid;
+  }
+}
+
+@media only screen and (max-width: 1080px) {
+  .middle {
+    margin-left: 350px;
   }
 
-  .post-profile{
-    height: 45px;
-    width: 45px;
-    /* object-fit: contain; */
-    border: 3px snow white;
-    border-radius: 50%;
-    
+  .box {
+    columns: 1;
+    column-gap: 10px;
   }
 
+  .img-card {
+    width: 450px;
+    break-inside: avoid;
+  }
+}
 
-
-  
-
-  .img-card:hover .overlay{
-    opacity: 1;
+@media only screen and (max-width: 900px) {
+  .middle {
+    margin-left: 80px;
   }
 
-  
-
-  @media only screen and (max-width: 1600px) {
-    .middle {
-        margin-left: 350px;
-    }
-
-    .box {
-      columns: 3;
-      column-gap: 10px;
-    }
-
-    .img-card {
-      width: 380px;
-      break-inside: avoid;
-    }
+  .box {
+    columns: 1;
+    column-gap: 10px;
   }
 
-  @media only screen and (max-width: 1530px) {
-    .middle {
-        margin-left: 350px;
-    }
-
-    .box {
-      columns: 3;
-      column-gap: 10px;
-    }
-
-    .img-card {
-      width: 350px;
-      break-inside: avoid;
-    }
+  .img-card {
+    width: 350px;
+    break-inside: avoid;
   }
-
-  @media only screen and (max-width: 1445px) {
-    .middle {
-        margin-left: 350px;
-    }
-
-    .box {
-      columns: 3;
-      column-gap: 10px;
-    }
-
-    .img-card {
-      width: 280px;
-      break-inside: avoid;
-    }
-  }
-
-  @media only screen and (max-width: 1250px) {
-    .middle {
-        margin-left: 350px;
-    }
-
-    .box {
-      columns: 2;
-      column-gap: 10px;
-    }
-
-    .img-card {
-      width: 350px;
-      break-inside: avoid;
-    }
-  }
-
-  @media only screen and (max-width: 1080px) {
-    .middle {
-        margin-left: 350px;
-    }
-
-    .box {
-      columns: 1;
-      column-gap: 10px;
-    }
-
-    .img-card {
-      width: 450px;
-      break-inside: avoid;
-    }
-  }
-
-  @media only screen and (max-width: 900px) {
-    .middle {
-        margin-left: 80px;
-    }
-
-    .box {
-      columns: 1;
-      column-gap: 10px;
-    }
-
-    .img-card {
-      width: 350px;
-      break-inside: avoid;
-    }
-  }
+}
