--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,8 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    
+
 </head>
 
 <body>
@@ -68,15 +70,13 @@
                 {% for post in posts %}
 
                 <div class="img-card">
-                    <a href=""><img src= "media/{{ post.image }}"
-                            alt="" />
+                    <a href=""><img src="media/{{ post.image }}" alt="" />
                     </a>
                     <div class="overlay">
                         <div class="content">
                             <div class="post-profile-div">
                                 <a href="https://www.google.com/"><img class="post-profile"
-                                        src="media/{{ post.user.profile.profile_pic }}"
-                                        alt="" />
+                                        src="media/{{ post.user.profile.profile_pic }}" alt="" />
                                     <p>{{ post.user.username }}</p>
                                 </a>
                             </div>
@@ -90,9 +90,17 @@
         </div>
     </div>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.js"
         integrity="sha512-Xo0Jh8MsOn72LGV8kU5LsclG7SUzJsWGhXbWcYs2MAmChkQzwiW/yTQwdJ8w6UA9C6EVG18GHb/TrYpYCjyAQw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+        <script src="{% static 'js/main.js' %}"></script>
+    
 </body>
 
 </html>
