added dos,brute force attack, strong password protection and added more features

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
+{% load static %}
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Travelogram</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css"
         integrity="sha512-KXol4x3sVoO+8ZsWPFI/r5KBVB/ssCGB5tsv2nVOKwLg33wTFP3fmnXa47FdSVIshVTgsYk/1734xSk9aFIa4A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,12 +13,48 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-    
+    <title>Document</title>
 
+    <style>
+        .middle-content {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: 350px;
+            width: 100vw;
+            height: 100vh;
+            background-color: #eeeeee;
+            /* border: 1px solid red; */
+        }
+
+        .card-center {
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 600px;
+            padding: 20px;
+        }
+
+        form {
+            width: 100%;
+        }
+
+        #image_view {
+            break-inside: avoid;
+            margin-top: 20px;
+            width: 566px;
+            height: 360px;
+            object-fit: contain;
+
+        }
+    </style>
 </head>
 
 <body>
     <div class="contain">
+
         <div class="sidemenu">
             <div class="title">
                 <!-- <h1>Travelogram</h1> -->
@@ -64,31 +101,43 @@
             </div>
         </div>
 
-        <div class="middle">
-            <div class="box">
 
-                {% for post in posts %}
-
-                <div class="img-card">
-                    <a href="{% url 'post:detail_post' post.pk %}"><img src="media/{{ post.image }}" alt="" />
-                    </a>
-                    <div class="overlay">
-                        <div class="content">
-                            <div class="post-profile-div">
-                                <a href="https://www.google.com/"><img class="post-profile"
-                                        src="media/{{ post.user.profile.profile_pic }}" alt="" />
-                                    <p>{{ post.user.username }}</p>
-                                </a>
-                            </div>
-                        </div>
+        <div class="middle-content">
+            <div class="card-center">
+                <form class="ui form" method="POST" action="" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="field">
+                        <label>Caption</label>
+                        <textarea name="caption" id="" cols="30" rows="10" placeholder="caption"></textarea>
                     </div>
-                </div>
 
-                {% endfor %}
 
+
+
+                    <div class="field">
+                        <label for="cars">Privacy:</label>
+                        <select id="privacy" name="privacy">
+                            <option value="1">Public</option>
+                            <option value="2">Followers</option>
+                            <option value="3">Private</option>
+                        </select>
+                    </div>
+
+
+                    <div class="field">
+                        <input accept="image/*" type='file' id="imgInp" name="image" />
+                        <img id="image_view" src="#" alt="image" />
+                    </div>
+                    <button class="ui button" type="submit">POST</button>
+                </form>
             </div>
         </div>
+
+
     </div>
+
+
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
@@ -99,8 +148,14 @@
         integrity="sha512-Xo0Jh8MsOn72LGV8kU5LsclG7SUzJsWGhXbWcYs2MAmChkQzwiW/yTQwdJ8w6UA9C6EVG18GHb/TrYpYCjyAQw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-        <script src="{% static 'js/main.js' %}"></script>
-    
+    <script>
+        imgInp.onchange = evt => {
+            const [file] = imgInp.files
+            if (file) {
+                image_view.src = URL.createObjectURL(file)
+            }
+        }
+    </script>
 </body>
 
 </html>
