--- a/static_files/css/main.css
+++ b/static_files/css/main.css
@@ -15,9 +15,7 @@
   background-color: white;
 }
 
-img {
-  pointer-events: none;
-}
+
 
 .title {
   margin-bottom: 20px;
@@ -89,6 +87,10 @@ img {
   margin-left: 20px;
 }
 
+.img-card > img {
+  pointer-events: none;
+}
+
 
 @media only screen and (max-width: 900px) {
   .sidemenu {
@@ -112,6 +114,7 @@ img {
   margin-left: 350px;
   width: 100vw;
   height: fit-content;
+  /* height: 100vh; */
   background-color: #eeeeee;
   /* border: 1px solid red; */
 }
